@@ -37,6 +37,7 @@ Release 0.20.0 - Unreleased
    HBASE-1245  hfile meta block handling bugs (Ryan Rawson via Stack)
    HBASE-1238  Under upload, region servers are unable
                to compact when loaded with hundreds of regions
+   HBASE-1247  checkAndSave doesn't Write Ahead Log
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
